ARTEMIS-4239 use StandardCharsets.UTF_8